# mahttp

./: Cargo.toml  README.md
src/: lib.rs
src/req/: http_types_into_hyper.rs  hyper_into_http_types.rs  mod.rs
src/req/method/: http_types_into_hyper.rs  hyper_into_http_types.rs  mod.rs
tests/: hyper.rs  mod.rs
