[package]
name = "mahttp"
version = "0.0.1"
edition = "2021"
authors = ["Beltram Maldant"]
description = "Bridge all http crates"
homepage = "https://github.com/beltram/mahttp"
repository = "https://github.com/beltram/mahttp"
license = "Apache-2.0"
keywords = ["http"]
categories = ["api-bindings"]

[dependencies]
anyhow = "1.0.48"
http-types = { version = "2.12.0", optional = true, default-features = false }
hyper = { version = "0.14.15", optional = true, default-features = false }

[dev-dependencies]
mahttp = { path = ".", features = ["hyper", "http-types"] }

[features]
default = []